--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "desafio09",
+  "name": "desafio",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
+    "serverFork": "pm2 start server.js --name='Server1' --watch -- 8081",
+    "serverCluster": "pm2 start server.js --name='server2' --watch -i max -- 8082",
+    "foreverfork": "forever start server.js",
+    "pm2cluster": "pm2 start server.js --name='Server2Cluster' --watch -i max",
+    "pm2fork": "pm2 start server.js --name='Server2Fork' --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "artillery": "^1.7.9",
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.5.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
     "log4js": "^6.3.0",
-    "mongoose": "^5.13.6",
+    "mongoose": "^5.13.9",
     "normalizr": "^3.6.1",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
